standards/gnds-2.0/try/c/src/v2.0/transport/Recoil.h


// THIS FILE WAS AUTOGENERATED!
// DO NOT MODIFY!

// Interface for C
// This header file is designed to work with both C and C++
// Function definitions are in this file's .cpp source

// -----------------------------------------------------------------------------
// -----------------------------------------------------------------------------
// Instructions for Users
//
// Constructs you're MORE likely to care about are preceded with:
//    // +++ comment
// Constructs you're LESS likely to care about are preceded with:
//    // --- comment
// Anything not marked as above can be ignored by most users.
//
// Recoil is the basic handle type in this file. Example:
//    // Create a default Recoil object:
//    Recoil handle = RecoilDefault();
// Functions involving Recoil are declared throughout this file.
// -----------------------------------------------------------------------------
// -----------------------------------------------------------------------------


// -----------------------------------------------------------------------------
// Preliminaries
// -----------------------------------------------------------------------------

#ifndef C_INTERFACE_TRY_V2_0_TRANSPORT_RECOIL
#define C_INTERFACE_TRY_V2_0_TRANSPORT_RECOIL

#include "GNDStk.h"

#ifdef __cplusplus
   #define extern_c extern "C"
#else
   #define extern_c
#endif

// Proxy C struct for the handled C++ class
struct RecoilClass { };


// -----------------------------------------------------------------------------
// Handle types
// -----------------------------------------------------------------------------

// +++ Recoil
// +++ General handle, suitable for most users. If you're not concerned about
// +++ strict "const correctness" in your C code, you can probably use this in
// +++ place of any function parameter of a const-aware handle type.
typedef struct RecoilClass *Recoil;

// --- Const-aware handles.
typedef const struct RecoilClass *const ConstHandle2ConstRecoil;
typedef       struct RecoilClass *const ConstHandle2Recoil;
typedef const struct RecoilClass *      Handle2ConstRecoil;
typedef       struct RecoilClass *      Handle2Recoil;


// -----------------------------------------------------------------------------
// Basics
// Create, Assign, Delete
// -----------------------------------------------------------------------------

// --- Create, default, const
extern_c Handle2ConstRecoil
RecoilDefaultConst();

// +++ Create, default
extern_c Handle2Recoil
RecoilDefault();

// --- Create, general, const
extern_c Handle2ConstRecoil
RecoilCreateConst(
   const char *const href
);

// +++ Create, general
extern_c Handle2Recoil
RecoilCreate(
   const char *const href
);

// +++ Assign
// +++ Use this to assign one handled object to another. Don't assign handles,
// +++ as with to = from. That has a meaning that you probably don't intend.
extern_c void
RecoilAssign(ConstHandle2Recoil This, ConstHandle2ConstRecoil from);

// +++ Delete
// +++ We'll attempt to remove no-longer-used objects automatically, but you
// +++ may improve performance if you delete them when you're done with them.
extern_c void
RecoilDelete(ConstHandle2ConstRecoil This);


// -----------------------------------------------------------------------------
// I/O
// Read, Write, Print
// Each returns 0 if failure, 1 if success.
// -----------------------------------------------------------------------------

// +++ Read from file
// +++ File can be XML, JSON, or HDF5.
// +++ We'll examine the file's contents to determine its type automatically.
extern_c int
RecoilRead(ConstHandle2Recoil This, const char *const filename);

// +++ Write to file
// +++ File can be XML, JSON, or HDF5.
// +++ We'll use filename's extension to determine the type you want written.
extern_c int
RecoilWrite(ConstHandle2ConstRecoil This, const char *const filename);

// +++ Print to standard output, in our prettyprinting format
extern_c int
RecoilPrint(ConstHandle2ConstRecoil This);

// +++ Print to standard output, as XML
extern_c int
RecoilPrintXML(ConstHandle2ConstRecoil This);

// +++ Print to standard output, as JSON
extern_c int
RecoilPrintJSON(ConstHandle2ConstRecoil This);


// -----------------------------------------------------------------------------
// Metadatum: href
// -----------------------------------------------------------------------------

// +++ Has
extern_c int
RecoilHrefHas(ConstHandle2ConstRecoil This);

// +++ Get
// +++ Returns by value
extern_c const char *
RecoilHrefGet(ConstHandle2ConstRecoil This);

// +++ Set
extern_c void
RecoilHrefSet(ConstHandle2Recoil This, const char *const href);


// -----------------------------------------------------------------------------
// Done
// -----------------------------------------------------------------------------

#undef extern_c
#endif